tests/typechecker/should_fail/external_functions_1.csp
external transpose, mtransclose, relational_image, relational_inverse_image

X = transpose({(true,0)}) == {(true, 0)}
